<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondos02"
    android:gravity="center"
    tools:context="com.estebanposada.proyectp7.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="right"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_tvStatusUser"
                android:text="User"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_tvStatusEmail"
                android:text="E-mail"
                android:textSize="15sp"
                android:textColor="@color/whitesmoke"      />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/dataStatus"
                android:textSize="20sp"
                android:layout_margin="5sp"
                android:textColor="@color/com_facebook_blue" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bien"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginBottom="50sp"/>
<!--
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:id="@+id/google_icon"
                android:layout_margin="10sp"
                android:src="@drawable/dj"/>-->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/id_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center"
                tools:visibility="gone"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/id_sign_out_button"
                android:textSize="14sp"
                android:text="@string/btnSignOut"
                android:textColor="@color/darkslategray"
                android:background="@color/white"
                android:textAllCaps="false"
                android:layout_margin="5sp"
                android:visibility="gone"
                android:layout_gravity="center"
                tools:visibility="visible" />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnlogin"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="fill_parent"
                android:layout_marginTop="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/sNombre"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:id="@+id/idname"
                android:layout_marginTop="20sp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/sPass"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:id="@+id/idpass"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="30sp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/log"
                    android:id="@+id/log"
                    android:onClick="log_in"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Reg"
                    android:id="@+id/formul"
                    android:onClick="formu"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
